--- a/knowledge-base-api/src/main/resources/application.properties
+++ b/knowledge-base-api/src/main/resources/application.properties
@@ -11,5 +11,11 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
 
+#JWT
+jwt.secret = _@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+# token com duração de 7 dias
+jwt.expiration = 604800
+
 #paginação
 pagination.qtt_per_page=10
+
