--- a/knowledge-base-api/pom.xml
+++ b/knowledge-base-api/pom.xml
@@ -82,6 +82,11 @@
 			<artifactId>spring-security-test</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
