Update api - Add flyway dependency

--- a/knowledge-base-api/src/main/resources/application.properties
+++ b/knowledge-base-api/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.profiles.active=dev
 
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/knowledgeBase
 spring.datasource.username=root
 spring.datasource.password=Dsw04051977@
