--- a/knowledge-base-api/pom.xml
+++ b/knowledge-base-api/pom.xml
@@ -87,6 +87,11 @@
 			<artifactId>ehcache</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
