--- a/knowledge-base-web/package.json
+++ b/knowledge-base-web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "knowledge-base",
+  "name": "knowledge-base-web",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,7 +11,9 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.5",
+    "@angular/cdk": "^11.0.3",
+    "@angular/material": "^11.0.3",
+    "@angular/animations": "^11.0.7",
     "@angular/common": "~11.0.5",
     "@angular/compiler": "~11.0.5",
     "@angular/core": "~11.0.5",
@@ -19,6 +21,7 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "bootstrap": "^4.5.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
