--- a/knowledge-base-web/package.json
+++ b/knowledge-base-web/package.json
@@ -17,10 +17,12 @@
     "@angular/compiler": "~11.0.5",
     "@angular/core": "~11.0.5",
     "@angular/forms": "~11.0.5",
+    "@angular/localize": "~11.0.5",
     "@angular/material": "^11.0.3",
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.1",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
