--- a/knowledge-base-api/src/main/resources/application.properties
+++ b/knowledge-base-api/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.profiles.active=dev
 
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/knowledgeBase
-spring.datasource.username=root
-spring.datasource.password=Dsw04051977@
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # exibe os comandos SQL
@@ -13,9 +13,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
 
 #JWT
-jwt.secret = _@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
 # token com duração de 7 dias
-jwt.expiration = 604800
+jwt.expiration=604800
 
 #paginação
 pagination.qtt_per_page=15
